@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package comicheft.entity {
  class "type ComicheftArt = 'KINDLE' | 'DRUCKAUSGABE'" as ComicheftArt
  hide ComicheftArt circle

  class "type Verlag = 'ZEIT_VERLAG' | 'BOCOLA_VERLAG'" as Verlag
  hide Verlag circle

  class Comicheft <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly titel: string
    @Column() readonly rating: number
    @Column() readonly art: ComicheftArt
    @Column() readonly verlag: Verlag
    @Column() readonly preis: number
    @Column() readonly rabatt: number
    @Column() readonly lieferbar: boolean
    @Column() readonly datum: Date
    @Column() readonly isbn: string
    @Column() readonly homepage?: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Schlagwort <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly schlagwort: string
    @ManyToOne() readonly comicheft: Comicheft
  }

  Comicheft ..> Entity
  Comicheft *--> "*" Schlagwort : @OneToMany() schlagwoerter
  Comicheft .up.> ComicheftArt
  Comicheft .up.> Verlag

  ComicheftArt .[hidden].> Verlag
}

hide empty members

@enduml
